examples/nameresolution/unused_warning.an

id x = x

id x = error

// args: -e ast-r --no-color
// expected exit status: 1
// expected stdout:
// // id = c1m576_1637
// id_c1m576_1637_0 x_1 = x_1
// 
// // id = c1m576_973
// id_c1m576_1637_0 x_1 = error_?

// expected stderr:
// examples/nameresolution/unused_warning.an:4:1
// 4 | id x = error	// warning: `id` was already defined
//   | ^^
// 
// examples/nameresolution/unused_warning.an:4:4
// 4 | id x = error	// warning: `x` is never used
//   |    ^
// 
// examples/nameresolution/unused_warning.an:4:8
// 4 | id x = error	// error: `error` not found in scope
//   |        ^^^^^
// 
// Found 1 error and 2 warnings

